# investing-AGRO3

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: model_config.yaml  pdf_catalog.yaml  pipeline_config.yaml
src/data_ingestion/: __init__.py  fundamentals.py  macro_data.py  market_data.py  pdf_downloader.py  status_invest.py
src/evaluation/: __init__.py  metrics.py  predict.py  threshold_calibration.py
src/feature_engineering/: __init__.py  consolidator.py  fundamental_features.py  pipeline.py  sliding_window.py  target_builder.py  technical_features.py
src/models/: dataset.py  mlp.py  trainer.py
src/utils/: config.py  logger.py  validators.py
tests/unit/: test_consolidator.py  test_fundamental_features.py  test_fundamentals.py  test_macro_data.py  test_market_data.py  test_metrics.py  test_mlp_forward_pass.py  test_pdf_downloader.py  test_sliding_window.py  test_target_builder.py  test_technical_features.py  test_utils.py
